# kabegame

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLUGIN_FORMAT.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README_PLUGIN_DEV.md  RHAI_API.md  WINDOWS_BUILD.md  a  index.html  nodemon.json  nodemon.local-plugins.json  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.json  prompt.md  schema.prisma  todo  todo.ini  todo.md  tsconfig.json  uno.config.pub.ts  vite.config.pub.ts  vite.config.ts  wallpaper.html
src-tauri/: .plugin-rebuild-trigger  .taurignore  Cargo.toml  build.rs  main.taurignore  plugin-editor.taurignore  tauri.conf.json  tauri.sidecar.conf.json
src-tauri-plugins/tauri-plugin-archiver/: Cargo.toml  README.md
src-tauri-plugins/tauri-plugin-archiver/android/: build.gradle.kts
src-tauri-plugins/tauri-plugin-archiver/src/: desktop.rs  lib.rs  mobile.rs  models.rs
src-tauri-plugins/tauri-plugin-compress/: Cargo.toml  build.rs
src-tauri-plugins/tauri-plugin-compress/android/: build.gradle.kts
src-tauri-plugins/tauri-plugin-compress/src/: error.rs  lib.rs  mobile.rs  models.rs
src-tauri-plugins/tauri-plugin-pathes/: Cargo.toml  README.md  build.rs
src-tauri-plugins/tauri-plugin-pathes/android/: build.gradle.kts
src-tauri-plugins/tauri-plugin-pathes/src/: error.rs  lib.rs  mobile.rs  models.rs
src-tauri-plugins/tauri-plugin-picker/: .gitignore  Cargo.toml  build.rs  package.json
src-tauri-plugins/tauri-plugin-picker/android/: build.gradle.kts
src-tauri-plugins/tauri-plugin-picker/guest-js/: index.ts
src-tauri-plugins/tauri-plugin-picker/permissions/: default.toml
src-tauri-plugins/tauri-plugin-picker/src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
src-tauri-plugins/tauri-plugin-share/: Cargo.toml  README.md  build.rs  package.json
src-tauri-plugins/tauri-plugin-share/android/: build.gradle.kts
src-tauri-plugins/tauri-plugin-share/guest-js/: index.ts
src-tauri-plugins/tauri-plugin-share/permissions/: default.toml
src-tauri-plugins/tauri-plugin-share/src/: error.rs  lib.rs  mobile.rs
src-tauri-plugins/tauri-plugin-wallpaper/: .gitignore  Cargo.toml  README.md  build.rs  package.json
src-tauri-plugins/tauri-plugin-wallpaper/android/: build.gradle.kts
src-tauri-plugins/tauri-plugin-wallpaper/guest-js/: index.ts
src-tauri-plugins/tauri-plugin-wallpaper/permissions/: default.toml
src-tauri-plugins/tauri-plugin-wallpaper/src/: lib.rs  mobile.rs  models.rs
src-tauri/app-cli/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/app-cli/src/: main.rs
src-tauri/app-cli/template/: manifest.json
src-tauri/app-main/: .taurignore  Cargo.toml  build.rs  tauri.conf.json  tauri.conf.json.handlebars  tauri.linux.conf.json
src-tauri/app-main/capabilities/: main.json  main.json.handlebars
src-tauri/app-main/deb/: kabegame-daemon.service  kabegame-kgpg.desktop  kabegame-kgpg.xml  kabegame.desktop  postinst.sh  prerm.sh
src-tauri/app-main/icons/: icon.icns
src-tauri/app-main/nsis/: installer-hooks.nsh
src-tauri/app-main/resources/: bootstrap.js  surf_context_menu.js  surf_navbar.js  surf_toast.js
src-tauri/app-main/scripts/: inject-deb-postinst.sh
src-tauri/app-main/sidecar/: README.md  ffmpeg-kb-aarch64-apple-darwin
src-tauri/app-main/src/: archiver_provider.rs  compress_provider.rs  content_io_provider.rs  core_init.rs  daemon_client.rs  desktop_env.rs  event_listeners.rs  file_server.rs  http_server.rs  lib.rs  linux_desktop.rs  main.rs  mcp_server.rs  pathes_plugin.rs  server.rs  server_unix.rs  startup.rs  storage.rs  tray.rs  vd_listener.rs  virtual_drive.rs  virtual_driver.rs  web_assets.rs  web_entry.rs  web_import.rs
src-tauri/app-plugin-editor/: .taurignore  Cargo.toml  build.rs  tauri.conf.json  tauri.conf.json.handlebars
src-tauri/app-plugin-editor/capabilities/: main.json
src-tauri/app-plugin-editor/src/: daemon_client.rs  event_listeners.rs  main.rs  plugin_editor.rs
src-tauri/capabilities/: main.json
src-tauri/cef-example/: Cargo.toml  build.rs
src-tauri/cef-example/src/: main.rs
src-tauri/cef-helper/: Cargo.toml
src-tauri/cef-helper/src/: lib.rs  main.rs
src-tauri/core/: Cargo.toml  build.rs
src-tauri/core/src/: app_paths.rs  bin_finder.rs  daemon_startup.rs  dedupe.rs  emitter.rs  image_type.rs  kgpg.rs  lib.rs  plugin.rs  plugin_editor.rs  settings.rs  shell_open.rs  storage.rs  tray.rs  virtual_drive.rs  wallpaper_engine_export.rs  windows_effects.rs  workarounds.rs
src-tauri/core/tests/: dsl_e2e.rs  parity.rs
src-tauri/daemon/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/daemon/src/: connection_handler.rs  dedupe_service.rs  main.rs  server.rs  server_unix.rs  server_windows.rs  vd_listener.rs
src-tauri/icons/: README.md  icon.icns
src-tauri/kabegame/: .taurignore  Cargo.toml  build.rs  tauri.conf.json  tauri.conf.json.handlebars  windows-app.manifest
src-tauri/kabegame-cli/: Cargo.toml  build.rs
src-tauri/kabegame-cli/src/: main.rs
src-tauri/kabegame-cli/template/: .kabegameignore  cargo-generate.toml  crawl.js  crawl.rhai  package.json  rspack.config.mjs  tsconfig.json
src-tauri/kabegame-core/: Cargo.toml  build.rs
src-tauri/kabegame-core/src/: app_paths.rs  bin_finder.rs  emitter.rs  image_type.rs  kgpg.rs  lib.rs  media_decode.rs  media_dimensions.rs  schedule_sync.rs  settings.rs  shell_open.rs  wallpaper_compat.rs  wallpaper_engine_export.rs  workarounds.rs
src-tauri/kabegame-core/tests/: dsl_e2e.rs
src-tauri/kabegame-i18n/: Cargo.toml
src-tauri/kabegame-i18n/locales/: en.yml  ja.yml  ko.yml  zh.yml  zhtw.yml
src-tauri/nsis/: installer-hooks.nsh
src-tauri/pathql-rs/: Cargo.toml  DESIGN_SPEC.md  README.md
src-tauri/src/: app_paths.rs  crawler.rs  debug_tools.rs  kgpg.rs  lib.rs  main.rs  plugin.rs  plugin_editor.rs  runtime_flags.rs  settings.rs  storage.rs  tray.rs  wallpaper_engine_export.rs  wallpaper_rotator.rs  wallpaper_window.rs
src-tauri/tauri-runtime-cef/: Cargo.toml  README.md  build.rs  windows-app.manifest
test/native-auto-import/: Cargo.toml  README.md
(+1969 files in other folders)
