[workspace]
members = [
  "src-tauri/kabegame-core",
  "src-tauri/kabegame-i18n",
  "src-tauri/pathql-rs",
  "src-tauri/kabegame",
  "src-tauri/kabegame-cli",
  "src-tauri/tauri-runtime-cef",
  "src-tauri/cef-helper",
  "src-tauri/cef-example",
  "src-tauri-plugins/tauri-plugin-picker",
  "src-tauri-plugins/tauri-plugin-pathes",
  "src-tauri-plugins/tauri-plugin-share",
  "src-tauri-plugins/tauri-plugin-compress",
  "src-tauri-plugins/tauri-plugin-wallpaper",
  "src-tauri-plugins/tauri-plugin-task-notification",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "4.3.0"

[workspace.dependencies]
arc-swap= "1.7"
async-trait = "0.1"
base64 = "0.22"
image = "0.24"
include_dir = "0.7"
json5 = "0.4"
kabegame-core = {path = "./src-tauri/kabegame-core", default-features = false}
kabegame-i18n = {path = "./src-tauri/kabegame-i18n"}
pathql-rs = {path = "./src-tauri/pathql-rs", default-features = false}
regex = "1"
regex-automata = "0.4"
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
sqlparser = "0.51"
thiserror = "1.0"
rhai = {version = "1.24", features = ["sync"]}
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1.0"
md5 = "0.7"
# 进程内 FFmpeg（libav*）绑定：替代旧的 ffmpeg sidecar 进程调用与 mp4 crate。
# feature 须匹配 third/FFmpeg 子模块的 FFmpeg 主版本（当前 n8.2 → ffmpeg8）。
# 链接经 rusty_ffmpeg：由构建环境的 FFMPEG_PKG_CONFIG_PATH 指向 third/FFmpeg-build/install/lib/pkgconfig。
rsmpeg = { path="./third/rsmpeg", default-features = false, features = ["ffmpeg8_1"] }
rusty_ffmpeg = { path="./third/rusty_ffmpeg", default-features = false, features = ["ffmpeg8_1"]}
percent-encoding = "2"
sha2 = "0.10"
tauri-build = {version = "2.6.2", features = []}
tauri-plugin-compress = {path = "./src-tauri-plugins/tauri-plugin-compress"}
tauri-plugin-pathes = {path = "./src-tauri-plugins/tauri-plugin-pathes"}
tauri-plugin-picker = {path = "./src-tauri-plugins/tauri-plugin-picker"}
tauri-plugin-share = {path = "./src-tauri-plugins/tauri-plugin-share"}
tauri-plugin-task-notification = {path = "./src-tauri-plugins/tauri-plugin-task-notification"}
tauri-plugin-wallpaper = {path = "./src-tauri-plugins/tauri-plugin-wallpaper"}
tokio = {version = "1", features = ["full"]}
url = "2.5"
uuid = {version = "1.6", features = ["v4", "serde"]}
windows-sys = {version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_IO",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
]}
zip = "0.6"

[patch.crates-io]
tauri-runtime = { path = "third/tauri-runtime" }

# [profile.release]
# on when release
# codegen-units = 1
# lto = "thin"

# dev/debug 构建下，把所有第三方依赖按 opt-level 2 编译（工作区成员不受影响，仍 opt-level 0、可调试）。
# 原因：image crate 的缩放/解码是纯 Rust 像素运算，未优化的 debug 下慢几十倍
# （实测 1737x1500 缩略图 Lanczos3 缩放：debug ~3.4s vs release ~50ms）。
# 这样 `bun dev` 下大图缩略图也能快到几十~几百毫秒，而本地 crate 编译/调试体验不变。
[profile.dev.package."*"]
opt-level = 2
debug-assertions = false
overflow-checks = false

# deno_core 的 op2 宏在调用方按 `#[cfg(debug_assertions)]` 生成 `_ops::reentrancy_check`
# 调用，而 deno_core 仅在 debug_assertions 下导出该符号。上面的 `*` 覆盖会把 deno_core 的
# debug_assertions 关掉，导致工作区成员（debug_assertions=on）调用一个未导出的符号（E0425）。
# 给 deno_core 单独恢复 debug_assertions，使调用点与导出点一致。release 下两侧同为 off，无此问题。
[profile.dev.package.deno_core]
debug-assertions = true
