[workspace]
resolver = "2"
members = [
  "core",
  "app-main",
  "app-plugin-editor",
  "app-cli",
]

[workspace.package]
version = "1.2.0"
edition = "2021"

[workspace.dependencies]
kabegame-core = { path = "core", default-features = false }
tauri = { version = "2.0", features = ["tray-icon", "devtools"] }
tauri-build = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
image = "0.24"
zip = "0.6"
rhai = { version = "1.19", features = ["sync"] }
sha2 = "0.10"
base64 = "0.22"
