[package]
name = "tauri-plugin-share"
version = "0.1.0"
authors = ["Kabegame"]
description = "Android 分享与复制图片到剪贴板"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-share"

[dependencies]
tauri = { version = "2.10.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }
