[package]
name = "tauri-plugin-wallpaper"
version = "0.1.0"
authors = ["Kabegame"]
description = "Android wallpaper plugin"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-wallpaper"

[dependencies]
tauri = { version = "2.10.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }
