[package]
edition = {workspace = true}
name = "kabegame"
version = {workspace = true}

[lib]
name = "kabegame"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = { workspace = true }
base64 = {workspace = true}
image = {workspace = true}
lru = {version = "0.12", optional = true}
memmap2 = {version = "0.9", optional = true}
serde = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true}
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "=2.4.2"
tauri-plugin-fs = "=2.4.4"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-shell = "=2.3.3"
tokio = {workspace = true}
uuid = {workspace = true}

# 桌面端启用 IPC 功能，移动端禁用
[target.'cfg(not(target_os = "android"))'.dependencies]
kabegame-core = {workspace = true, default-features = false, features = ["ipc-server", "ipc-client"] }
governor = "0.7"

[target.'cfg(target_os = "android")'.dependencies]
kabegame-core = {workspace = true, default-features = false}
tauri-plugin-picker = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
dokan = {version = "0.3.1", optional = true}
widestring = {version = "0.4.3", optional = true}
winapi = {version = "0.3.9", features = ["ntstatus", "winnt", "winbase"], optional = true}
windows = {version = "0.52", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_Shell",
] }
windows-sys = {workspace = true, features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
] }
winreg = "0.52"
winver = "1"

[target.'cfg(target_os = "linux")'.dependencies]
arboard = "3.6"

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2.10", features = ["macos-private-api", "tray-icon", "devtools", "protocol-asset", "image-png"] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "std",
  "NSPasteboard",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
  "std",
  "NSData",
] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
tauri = { version = "2.10", features = ["macos-private-api", "tray-icon", "devtools", "protocol-asset", "image-png"] }

[build-dependencies]
tauri-build = {workspace = true}

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

[[bin]]
name = "kabegame"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
opt-level = 3
debug = false
strip = true
overflow-checks = false
rpath = false
