[package]
edition = {workspace = true}
name = "kabegame"
version = {workspace = true}

[lib]
name = "kabegame"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = { workspace = true }
base64 = {workspace = true}
image = {workspace = true}
lru = {version = "0.12", optional = true}
memmap2 = {version = "0.9", optional = true}
serde = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true}
kabegame-i18n = { workspace = true }
pathql-rs = { workspace = true }
dirs = "5.0"
tokio = {workspace = true}
url = "2"
uuid = {workspace = true}

# local feature (Tauri native app — desktop + Android)
tauri = { version = "2.10", features = [ "tray-icon", "devtools", "protocol-asset", "image-png"], optional = true }
tauri-plugin-clipboard-manager = { version = "2", optional = true }
tauri-plugin-dialog = { version = "=2.4.2", optional = true }
tauri-plugin-global-shortcut = { version = "2.3.1", optional = true }
tauri-plugin-pathes = { workspace = true, optional = true }
tauri-plugin-opener = { version = "2", optional = true }

# 桌面端启用 IPC 功能，移动端禁用
[target.'cfg(not(target_os = "android"))'.dependencies]
kabegame-core = {workspace = true, default-features = false, features = ["ipc-server", "ipc-client"] }
governor = "0.7"
axum = { version = "0.8", features = ["multipart"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.11", features = ["stream", "native-tls"] }
rmcp = { version = "1.4", features = ["server", "transport-streamable-http-server"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
include_dir = "0.7"

[target.'cfg(target_os = "android")'.dependencies]
kabegame-core = {workspace = true, default-features = false, features = ["ipc-server"] }
reqwest = { version = "0.11", features = ["stream", "rustls-tls"] }
tauri-plugin-picker = { workspace = true, optional = true }
tauri-plugin-archiver = { workspace = true, optional = true }
tauri-plugin-share = { workspace = true, optional = true }
tauri-plugin-compress = { workspace = true, optional = true }
tauri-plugin-wallpaper = { workspace = true, optional = true }
tauri-plugin-task-notification = { workspace = true, optional = true }
tauri-plugin-android-battery-optimization = { version = "0.1.4", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
dokan = {version = "0.3.1", optional = true}
widestring = {version = "0.4.3", optional = true}
winapi = {version = "0.3.9", features = ["ntstatus", "winnt", "winbase"], optional = true}
windows = {version = "0.52", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_Shell",
] }
windows-sys = {workspace = true, features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
] }
winreg = "0.52"
winver = "1"

[target.'cfg(target_os = "linux")'.dependencies]
arboard = "3.6"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3"
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "std",
  "NSColor",
  "NSWindow",
  "NSApplication",
  "NSScreen",
  "NSPasteboard",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
  "std",
  "NSData",
] }
objc2 = { version = "0.6", default-features = false }

[build-dependencies]
tauri-build = {workspace = true, optional = true}

[features]
default = ["local"]
local = [
    "kabegame-core/virtual-driver",
    "dep:tauri",
    "dep:tauri-plugin-clipboard-manager",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-global-shortcut",
    "dep:tauri-plugin-pathes",
    "dep:tauri-plugin-opener",
    "dep:tauri-plugin-android-battery-optimization",
    "dep:tauri-plugin-picker",
    "dep:tauri-plugin-archiver",
    "dep:tauri-plugin-share",
    "dep:tauri-plugin-compress",
    "dep:tauri-plugin-wallpaper",
    "dep:tauri-plugin-task-notification",
    "dep:tauri-build",
]
web = []
# Activated by `tauri build` in production — serves embedded assets via tauri.localhost.
# Must NOT be pulled in by `local`, or dev mode would bypass devUrl (Vite).
custom-protocol = ["tauri?/custom-protocol"]

[[bin]]
name = "kabegame"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
opt-level = 3
debug = false
strip = true
overflow-checks = false
rpath = false
