[package]
name = "kabegame-plugin-editor"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
kabegame-core = { workspace = true }
tauri = { workspace = true, features = ["protocol-asset"] }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-fs = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
zip = { workspace = true }
rhai = { workspace = true }
base64 = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol", "kabegame-core/custom-protocol"]

[[bin]]
name = "kabegame-plugin-editor"
path = "src/main.rs"




