[package]
name = "kabegame-plugin-editor"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
kabegame-core = { workspace = true, default-features = false }
tauri = { workspace = true, features = ["protocol-asset"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
serde_json = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
zip = { workspace = true }
rhai = { workspace = true }
base64 = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol", "kabegame-core/custom-protocol"]

[[bin]]
name = "kabegame-plugin-editor"
path = "src/main.rs"




