[package]
edition = {workspace = true}
name = "kabegame-plugin-editor"
version = {workspace = true}

[dependencies]
base64 = {workspace = true}
image = {workspace = true}
kabegame-core = {workspace = true, default-features = false, features = ["ipc-client"]}
rhai = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tauri = {workspace = true, features = ["protocol-asset"]}
tauri-plugin-dialog = "=2.4.2"
tauri-plugin-fs = "=2.4.4"
tauri-plugin-shell = "=2.3.3"
tokio = {workspace = true}
zip = {workspace = true}

[build-dependencies]
tauri-build = {workspace = true}

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

[[bin]]
name = "kabegame-plugin-editor"
path = "src/main.rs"
