[package]
name = "cef-helper"
version = "0.1.0"
edition = "2021"
publish = false
description = "Standalone CEF subprocess executable, shared by cef-example and (eventually) kabegame's CEF runtime backend."

[[bin]]
name = "cef-helper"
path = "src/main.rs"

[lib]
name = "cef_helper"
path = "src/lib.rs"

[dependencies]
# 只需要子进程入口:execute_process + (macOS) 运行时加载框架。不依赖 tauri-runtime-cef。
cef = { version = "149", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
