[package]
build = "build.rs"
description = "Kabegame 共享后端核心（crawler/plugin/storage 等）"
edition = {workspace = true}
name = "kabegame-core"
version = {workspace = true}

[dependencies]
arc-swap = "1.7"
auto-launch = "0.5"
base64 = {workspace = true}
dirs = "5.0"
futures-util = "0.3"
image = {workspace = true}
lru = "0.12"
regex = "1.11"
reqwest = {version = "0.11", features = ["blocking", "json", "stream", "native-tls"]}
rhai = {workspace = true}
rusqlite = {version = "0.31", features = ["bundled"]}
scraper = "0.19"
select = "0.6"
serde = {workspace = true}
serde_bytes = {workspace = true}
serde_cbor = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true}
sled = "0.34"
tokio = {workspace = true}
unrar = "0.5.8"
url = {workspace = true}
uuid = {workspace = true}
zip = {workspace = true}

[target.'cfg(target_os = "linux")'.dependencies]
which = {version = "6.0", optional = true}

[target.'cfg(windows)'.dependencies]
dokan = "0.3.1"
memmap2 = "0.9"
widestring = "0.4.3"
winapi = {version = "0.3.9", features = ["ntstatus", "winnt", "winbase"]}
windows-sys = {version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
]}

[features]
default = ["ipc-client"]
ipc-client = []
ipc-server = []
