[package]
build = "build.rs"
description = "Kabegame 共享后端核心（crawler/plugin/storage 等）"
edition = { workspace = true }
name = "kabegame-core"
version = { workspace = true }

[dependencies]
arc-swap = "1.7"
async-trait = { workspace = true }
auto-launch = "0.5"
base64 = { workspace = true }
encoding_rs = "0.8"
dirs = "5.0"
futures-util = "0.3"
image = { workspace = true }
infer = "0.19"
lru = "0.12"
regex = "1.11"
rhai = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
scraper = "0.19"
select = "0.6"
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sled = "0.34"
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
walkdir = "2"
zip = { workspace = true }

# 桌面端使用 native-tls，移动端使用 rustls
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
reqwest = { version = "0.11", features = [
  "blocking",
  "json",
  "stream",
  "native-tls",
] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
reqwest = { version = "0.11", features = [
  "blocking",
  "json",
  "stream",
  "rustls-tls",
] }


# unrar 的 C++ 代码使用 lutimes，Android NDK 不支持，仅非 Android 启用
[target.'cfg(not(target_os = "android"))'.dependencies]
unrar = "0.5.8"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
which = { version = "6.0", optional = true }
fuser = { version = "0.16", features = ["libfuse"] }
libc = "0.2"

# Android 交叉编译时无系统 OpenSSL，使用 vendored 从源码编译
[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
dokan = "0.3.1"
memmap2 = "0.9"
widestring = "0.4.3"
winapi = { version = "0.3.9", features = ["ntstatus", "winnt", "winbase"] }
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["ipc-client"]
ipc-client = []
ipc-server = []
