[package]
name = "kabegame-daemon"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
kabegame-core = { workspace = true, default-features = false, features = ["dedupe"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }

[features]
# Windows 下可选启用 virtual-drive（与 app-cli 对齐）
default = []
virtual-drive = ["kabegame-core/virtual-drive"]
virtual-drive-windows = ["virtual-drive", "kabegame-core/virtual-drive-windows"]

[[bin]]
name = "kabegame-daemon"
path = "src/main.rs"

